--- a/src/app/pages/abono2/abono2.component.html
+++ b/src/app/pages/abono2/abono2.component.html
@@ -2,72 +2,81 @@
   &nbsp;
 
   <div class="container fondo-blanco " *ngIf="!_usuario.usuario.id_usuario">
-
-    <h2>
-      Regístrate
-    </h2>
+    <h2>Regístrate</h2>
     <p>
-      Para realizar transferencias debes estar registrado. Si ya estás registrado
-      <a routerLink="login">ingresa acá</a>
+      Para realizar transferencias debes estar registrado. Si ya estás
+      registrado <a routerLink="login">ingresa acá</a>
     </p>
-
   </div>
 
   <div *ngIf="_usuario.usuario.id_usuario" class="container fondo-blanco p-3">
     <h4>Deposito a cuenta corriente</h4>
-    <p>
-      Debes realizar un depósito en nuestra cuenta corriente.
-    </p>
+    <p>Debes realizar un depósito en nuestra cuenta corriente.</p>
     <div class="alert alert-dismissible alert-primary">
-      Solicita los datos bancarios de nuestra empresa en las redes sociales: <br>
-      <ul class="list-inline sociales">
-        <li class="list-inline-item">
-          <a href="https://www.Instagram.com/123depositos/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://wa.me/56935689629" target="_blank"><i class="fab fa-whatsapp"></i> Whatsapp</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="mailto:contacto@123depositos.com" target="_blank"><i class="far fa-envelope"></i>
-            contacto@123depositos.com</a>
-        </li>
+      <ul class=" sociales">
+        <li class="">GLOBAL VYM</li>
+        <li class="">N° 73531560</li>
+        <li class="">RUT: 76.944.961-2</li>
+        <li class="">contacto@123depositos.com</li>
+        <li class="">BANCO Santander</li>
       </ul>
-
+      <!-- <img class="img-fluid global" src="assets/img/global.png" alt=""> -->
     </div>
     <form ngNativeValidate [formGroup]="forma" (ngSubmit)="enviar()">
-
       <div class="form-group">
         <label for="exampleInputFile">Adjuntar comprobante</label>
-        <div>
-          <img *ngIf="imagen" [src]="imagen" width="100px">
-        </div>
-        <input type="file" (change)="seleccionarImagen($event.target.files[0])" class="form-control-file"
-          aria-describedby="fileHelp">
-        <small id="fileHelp" class="form-text text-muted">Adjunte el comprobante de depósito.</small>
+        <div><img *ngIf="imagen" [src]="imagen" width="100px" /></div>
+        <input
+          type="file"
+          (change)="seleccionarImagen($event.target.files[0])"
+          class="form-control-file"
+          aria-describedby="fileHelp"
+        />
+        <small id="fileHelp" class="form-text text-muted"
+          >Adjunte el comprobante de depósito.</small
+        >
       </div>
 
       <div class="alert alert-dismissible alert-secondary">
         <div class="row">
-
           <div class="col-sm">
             <div class="form-group">
               <label>Monto a transferir</label>
-              <input (change)="calcular()" formControlName="monto" name="monto" type="number" class="form-control" min="10000" required>
+              <input
+                (change)="calcular()"
+                formControlName="monto"
+                name="monto"
+                type="number"
+                class="form-control"
+                min="10000"
+                required
+              />
             </div>
           </div>
           <div class="col-sm">
             <div class="form-group">
               <label>Tasa de conversión (Bs)</label>
-              <input formControlName="tasa" name="tasa" type="number" class="form-control" placeholder="Tasa" required>
+              <input
+                formControlName="tasa"
+                name="tasa"
+                type="number"
+                class="form-control"
+                placeholder="Tasa"
+                required
+              />
             </div>
           </div>
           <div class="col-sm">
             <div class="form-group">
               <label>Monto final (Bs)</label>
-              <input formControlName="montofinal" name="montofinal" type="number" class="form-control" placeholder="" required>
+              <input
+                formControlName="montofinal"
+                name="montofinal"
+                type="number"
+                class="form-control"
+                placeholder=""
+                required
+              />
             </div>
           </div>
         </div>
@@ -76,36 +85,64 @@
       <div class="form-group">
         <label>Seleccione destinatario</label>
         <div class="input-group">
-          <select formControlName="misDestinatarios" name="misDestinatarios" class="custom-select" aria-describedby="button-addon2" required>
+          <select
+            formControlName="misDestinatarios"
+            name="misDestinatarios"
+            class="custom-select"
+            aria-describedby="button-addon2"
+            required
+          >
             <option value="">Seleccione ...</option>
-            <option *ngFor="let destinatario of _transferencias.misDestinatarios" [value]="destinatario.id">{{
-              destinatario.nombre
-            }}</option>
+            <option
+              *ngFor="let destinatario of _transferencias.misDestinatarios"
+              [value]="destinatario.id"
+              >{{ destinatario.nombre }}</option
+            >
           </select>
           <div class="input-group-append" id="button-addon2">
-            <button type="button" class="btn btn-success btn-des" (click)="abrirModal()">
-              <i class="fas fa-plus"></i>
-              Nuevo
+            <button
+              type="button"
+              class="btn btn-success btn-des"
+              (click)="abrirModal()"
+            >
+              <i class="fas fa-plus"></i> Nuevo
             </button>
-            <button (click)="quitar()" type="button" class="btn btn-danger btn-des">
-              <i class="fas fa-minus"></i>
-              Quitar
+            <button
+              (click)="quitar()"
+              type="button"
+              class="btn btn-danger btn-des"
+            >
+              <i class="fas fa-minus"></i> Quitar
             </button>
           </div>
         </div>
       </div>
-      <button type="submit" class="btn btn-success" [disabled]="btnCargando">Ya pagué con <br> transferencia electrónica</button>
-      <button type="button" class="btn boton" (click)="pagoKhipu()" >
-        <img src="https://s3.amazonaws.com/static.khipu.com/buttons/2015/200x75-transparent.png" id="pay-button"/>
+      <button type="submit" class="btn btn-success" [disabled]="btnCargando">
+        Ya pagué con <br />
+        transferencia electrónica
+      </button>
+      <button type="button" class="btn boton" (click)="pagoKhipu()">
+        <img
+          src="https://s3.amazonaws.com/static.khipu.com/buttons/2015/200x75-transparent.png"
+          id="pay-button"
+        />
       </button>
     </form>
   </div>
 
-  <button #btnModalDestinatarios [hidden]="true" type="button" data-toggle="modal" data-target="#modalDestinatarios">
+  <button
+    #btnModalDestinatarios
+    [hidden]="true"
+    type="button"
+    data-toggle="modal"
+    data-target="#modalDestinatarios"
+  >
     Launch demo modal
   </button>
   <div class="modal" id="modalDestinatarios">
-    <app-destinatario (cerrar)="cerrarModal()" (destinatario)="modalDestinatario($event)"></app-destinatario>
+    <app-destinatario
+      (cerrar)="cerrarModal()"
+      (destinatario)="modalDestinatario($event)"
+    ></app-destinatario>
   </div>
-
 </div>
