--- a/src/app/pages/como/como.component.html
+++ b/src/app/pages/como/como.component.html
@@ -1,44 +1,33 @@
 <div class="container principal">
-
   <div class="paso1">
     <div class="row">
       <div class="col-sm ">
         <div class="h110 d-none d-sm-block "></div>
-        <div class="paso">
-          <h3 class="align-middle">Paso 1</h3>
-        </div>
+        <div class="paso"><h3 class="align-middle">Paso 1</h3></div>
       </div>
       <div class="col-sm ">
         <div class="imagen">
-          <img src="assets/img/como/paso1-1.png" alt="Paso1">
+          <img src="assets/img/como/paso1-1.png" alt="Paso1" />
         </div>
-        <div class="texto">
-          A. Regístrate e inicia sesión.
-        </div>
+        <div class="texto">A. Regístrate e inicia sesión.</div>
       </div>
       <div class="col-sm">
         <div class="imagen">
-          <img src="assets/img/como/paso1-2.png" alt="Paso1">
+          <img src="assets/img/como/paso1-2.png" alt="Paso1" />
         </div>
-        <div class="texto">
-          B. Ingresa a la pestaña transferencias.
-        </div>
+        <div class="texto">B. Ingresa a la pestaña transferencias.</div>
       </div>
       <div class="col-sm">
         <div class="imagen">
-          <img src="assets/img/como/paso1-3.png" alt="Paso1">
+          <img src="assets/img/como/paso1-3.png" alt="Paso1" />
         </div>
-        <div class="texto">
-          C. Simula tu monto a transferir.
-        </div>
+        <div class="texto">C. Simula tu monto a transferir.</div>
       </div>
       <div class="col-sm">
         <div class="imagen">
-          <img src="assets/img/como/paso1-4.png" alt="Paso1">
+          <img src="assets/img/como/paso1-4.png" alt="Paso1" />
         </div>
-        <div class="texto">
-          D. Verifica el monto que va a llegar a destino.
-        </div>
+        <div class="texto">D. Verifica el monto que va a llegar a destino.</div>
       </div>
     </div>
   </div>
@@ -51,46 +40,66 @@
           <h3>Paso 2</h3>
         </div>
       </div>
-      
-      <div class="col-sm">
-        <div class="imagen">
-          <img src="assets/img/como/paso2-2.png" alt="Paso2">
-        </div>
-        <div class="texto">
-          A. Solicita los datos bancarios de nuestra empresa en las redes sociales: <br>
-          <ul class="list-unstyled sociales" >
-            <li>
-              <a href="https://www.Instagram.com/123depositos/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-            </li>
-            <li>
-              <a href="https://wa.me/56935689629" target="_blank"><i class="fab fa-whatsapp"></i> Whatsapp</a>
-            </li>
-            <li>
-              <a href="mailto:contacto@123depositos.com" target="_blank"><i class="far fa-envelope"></i> contacto@123depositos.com</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="imagen">
-          <img src="assets/img/como/paso2-1.png" alt="Paso2">
-        </div>
-        <div class="texto">
-          B. Realiza tu abono a la cuenta empresa por transferencia o en <a href="https://www.santander.cl/sucursales_santander/sucursales/index.asp" target="_blank">sucursales banco Santander.</a>
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="imagen">
-          <img src="assets/img/como/paso2-3.png" alt="Paso2">
-        </div>
-        <div class="texto">
-          C. Envía el comprobante del depósito a contacto@123depositos.com
-        </div>
-      </div>
 
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso2-2.png" alt="Paso2" />
+        </div>
+        <div class="texto">
+          A. Realiza un depósito a nuesta cuenta corriente: <br />
+          Razón social:
+          <span class="text-black-50 font-weight-bold">GLOBAL VYM SPA</span>
+          <br />
+          Banco: <span class="text-black-50 font-weight-bold">Santander</span>
+          <br />
+          Cuenta corriente:
+          <span class="text-black-50 font-weight-bold">73531560</span> <br />
+          RUT: <span class="text-black-50 font-weight-bold">76.944.961-2</span>
+
+          <!--
+            <ul class="list-unstyled sociales" >
+              <li>
+                <a href="https://www.Instagram.com/123depositos/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+              </li>
+              <li>
+                <a href="https://wa.me/56935689629" target="_blank"><i class="fab fa-whatsapp"></i> Whatsapp</a>
+              </li>
+              <li>
+                <a href="mailto:contacto@123depositos.com" target="_blank"><i class="far fa-envelope"></i> contacto@123depositos.com</a>
+              </li>
+            </ul>
+          -->
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso2-1.png" alt="Paso2" />
+        </div>
+        <div class="texto">
+          B. O realiza tu abono a la cuenta empresa por transferencia en
+          <a
+            href="https://www.santander.cl/sucursales_santander/sucursales/index.asp"
+            target="_blank"
+            class="text-black-50 font-weight-bold"
+            >sucursales banco Santander <i class="fa fa-map-marker" aria-hidden="true"></i> </a
+          >
+          <img src="assets/img/work-cafe-logo-black.png" alt="">
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso2-3.png" alt="Paso2" />
+        </div>
+        <div class="texto">
+          C. Envía el comprobante del depósito a
+          <span class="text-black-50 font-weight-bold"
+            >contacto@123depositos.com</span
+          >
+        </div>
+      </div>
     </div>
   </div>
 
@@ -104,31 +113,22 @@
       </div>
       <div class="col-sm">
         <div class="imagen">
-          <img src="assets/img/como/paso3-1.png" alt="Paso3">
+          <img src="assets/img/como/paso3-1.png" alt="Paso3" />
         </div>
-        <div class="texto">
-          A. Agrega tu destinatario.
-        </div>
+        <div class="texto">A. Agrega tu destinatario.</div>
       </div>
       <div class="col-sm">
         <div class="imagen">
-          <img src="assets/img/como/paso3-2.png" alt="Paso3">
+          <img src="assets/img/como/paso3-2.png" alt="Paso3" />
         </div>
-        <div class="texto">
-          B. Adjunta tu depósito.
-        </div>
+        <div class="texto">B. Adjunta tu depósito.</div>
       </div>
       <div class="col-sm">
         <div class="imagen">
-          <img src="assets/img/como/paso3-3.png" alt="Paso3">
+          <img src="assets/img/como/paso3-3.png" alt="Paso3" />
         </div>
-        <div class="texto">
-          C. Haz click en el checkbox ya transferí.
-
-        </div>
+        <div class="texto">C. Haz click en el checkbox ya transferí.</div>
       </div>
-
     </div>
   </div>
-
 </div>
