--- a/src/app/pages/vendedor/componentes/bloque/bloque.component.html
+++ b/src/app/pages/vendedor/componentes/bloque/bloque.component.html
@@ -38,7 +38,9 @@
             <td>{{ t.transferencia.nombre_mostrar }}</td>
             <td>{{ t.transferencia.monto }}</td>
             <td><i class="fa fa-camera"></i></td>
-            <td>{{ calcularBs(t.transferencia.monto, t.transferencia.tasa) }}</td>
+            <td>
+              {{ calcularBs(t.transferencia.monto, t.transferencia.tasa) }}
+            </td>
             <td>{{ t.transferencia.tasa }}</td>
             <td></td>
             <td>{{ t.destinatario.nombre }}</td>
@@ -48,12 +50,16 @@
             <td>{{ t.destinatario.correo }}</td>
             <td>{{ t.transferencia.estado }}</td>
           </tr>
-          
         </tbody>
       </table>
     </div>
     <div class="forma" [hidden]="_forma">
-      <button class="btn btn-default btn-sm float-right" (click)="ocultarForma()"><i class="fa fa-minus"></i></button>
+      <button
+        class="btn btn-default btn-sm float-right"
+        (click)="ocultarForma()"
+      >
+        <i class="fa fa-minus"></i>
+      </button>
       <div class="row">
         <div class="col-auto">
           <div class="form-group">
@@ -78,50 +84,47 @@
             />
           </div>
         </div>
-        <div class="col-auto">
+        <div class="col-12">
+          <div class="imagen">
+            <img *ngIf="imagen" [src]="imagen" width="100px" />
+            <i *ngIf="adjuntando" class="fas fa-spinner fa-spin"></i>
+            <small *ngIf="adjuntando" class="text-muted">Adjuntando ...</small>
+          </div>
           <div class="form-group">
-            <label>Destinatario</label>
+            <label for="exampleInputFile">Adjuntar comprobante</label>
             <input
-              type="text"
-              class="form-control"
-              placeholder="Destinatario"
+              (change)="seleccionarImagen($event.target.files[0])"
+              type="file"
+              class="form-control-file"
             />
+            <input #comprobante type="hidden" />
           </div>
         </div>
-        <div class="col-auto">
+        <div class="col-12">
           <div class="form-group">
-            <label>CI</label>
-            <input type="text" class="form-control" placeholder="CI" />
-          </div>
-        </div>
-        <div class="col-auto">
-          <div class="form-group">
-            <label>Banco</label>
-            <select class="custom-select" required>
-              <option value="">Seleccione ...</option>
-              <option
-                *ngFor="let banco of _transferencias.bancos"
-                [ngClass]="
-                  banco.tiempo == '24 hrs' ? 'text-primary' : 'text-danger'
-                "
-                [value]="banco.nombre"
-                >{{ banco.nombre }}</option
+            <label>Seleccione destinatario</label>
+            <div class="input-group">
+              <select
+                class="custom-select"
+                required
               >
-            </select>
-          </div>
-        </div>
-        <div class="col-auto">
-          <div class="form-group">
-            <label>N° Cuenta</label>
-            <input type="text" class="form-control" placeholder="N° cuenta" />
-          </div>
-        </div>
-        <div class="col-auto">
-            <div class="form-group">
-              <label>Correo</label>
-              <input type="text" class="form-control" placeholder="Correo" />
+                <option value="">Seleccione ...</option>
+                <option value="1">Algo</option>
+              </select>
+              <div class="input-group-append" id="button-addon2">
+                <button type="button" class="btn btn-success btn-des" (click)="formDestinatario = true">
+                  <i class="fas fa-plus"></i> Nuevo
+                </button>
+                <button type="button" class="btn btn-danger btn-des">
+                  <i class="fas fa-minus"></i> Quitar
+                </button>
+              </div>
             </div>
           </div>
+        </div>
+        <div *ngIf="formDestinatario" class="destinatario">
+          <app-destinatario-vendedor (idDestinatario)="cambiarDestinatario($event)" (ocultarDestinatario)="ocultar_destinatario($event)"></app-destinatario-vendedor>
+        </div>
       </div>
     </div>
 
@@ -136,7 +139,11 @@
       </div>
     </div>
     <div class="float-right">
-      <button type="button" class="btn btn-danger btn-circle btn-lg " (click)="mostrarForma()">
+      <button
+        type="button"
+        class="btn btn-danger btn-circle btn-lg "
+        (click)="mostrarForma()"
+      >
         <i class="fa fa-plus"></i>
       </button>
     </div>
