--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -14,7 +14,7 @@
         
       </div>
       <div>
-        <a routerLink="/login-vendedor">Acceso Vendedores</a>
+        <a routerLink="/login-vendedor">Acceso Ejecutivos</a>
       </div>
 
     </div>
