--- a/src/app/pages/vendedor/componentes/login-vendedor/login-vendedor.component.html
+++ b/src/app/pages/vendedor/componentes/login-vendedor/login-vendedor.component.html
@@ -5,7 +5,7 @@
  
     <form ngNativeValidate [formGroup]="forma" (submit)="login()" class="form-signin text-center" >
       <img class="mb-4" src="assets/img/123depositos_1.png" alt="" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Acceso vendedores</h1>
+      <h1 class="h3 mb-3 font-weight-normal">Acceso Ejecutivos</h1>
       <label  class="sr-only">Correo electrónico</label>
       <input formControlName="correo" name="correo" type="email" class="form-control" placeholder="Correo electrónico" required autofocus>
       <label class="sr-only">Contraseña</label>
