--- a/src/app/pages/vendedor/vendedor.component.html
+++ b/src/app/pages/vendedor/vendedor.component.html
@@ -14,7 +14,7 @@
   </div>
   <!-- COMPONENTE BLOQUE -->
   <div *ngFor="let bloque of vendedor.bloques">
-    <app-bloque [bloque]="bloque"></app-bloque>
+    <app-bloque [bloque]="bloque" [tasa]="tasa" [comision]="porc"></app-bloque>
   </div>
 
   <div>
